fix: broken margin on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,7 +41,6 @@ header#banner h2 {
 
 header#banner nav {
     display: inline-block;
-    margin-left: 1rem;
 }
 
 header#banner nav ul {
